--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tweet</title>
+    <!-- Bootstrap5 CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container-fluid">
+        <div class="row">
+            <header class="col-md-3">
+
+            </header>
+
+            <main class="col-md-9">
+                <h2>ホーム</h2>
+            </main>
+        </div>
+    </div>
 </body>
 </html>
