--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
     <div class="container-fluid">
         <div class="row">
             <header class="col-md-3">
-
+                <nav id="side-menu">
+                    <ul>
+                        <li>
+                            <a href="#">ホーム</a>
+                        </li>
+                    </ul>
+                </nav>
             </header>
 
-            <main class="col-md-9">
+            <main id="main" class="col-md-9">
                 <h2>ホーム</h2>
             </main>
         </div>
