--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
                 <nav id="side-menu">
                     <ul>
                         <li>
+                            <img src="svg/home.svg">
                             <a href="#">ホーム</a>
+                        </li>
+                        <li>
+                            <img src="svg/search.svg">
+                            <a href="#">トレンド</a>
+                        </li>
+                        <li>
+                            <img src="svg/profile.svg">
+                            <a href="#">プロフィール</a>
                         </li>
                     </ul>
                 </nav>
