--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Tweet</title>
     <!-- Bootstrap5 CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!--  -->
+    <link rel="stylesheet" href="css/default.css">
 </head>
 <body>
     <div class="container-fluid">
