--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 
             <main id="main" class="col-md-9">
                 <h2>ホーム</h2>
+                <div class="row">
+                    <form action="" method="post">
+                        <textarea class="form-control" name="message" 
+                        placeholder="いまどうしてる？"></textarea>
+                    </form>
+                </div>
             </main>
         </div>
     </div>
