--- a/index.html
+++ b/index.html
@@ -31,12 +31,17 @@
                 </nav>
             </header>
 
+            <!-- Ctrl + Shift + R : 強制再読み込み -->
             <main id="main" class="col-md-9">
                 <h2>ホーム</h2>
                 <div class="row">
                     <form action="" method="post">
                         <textarea class="form-control" name="message" 
                         placeholder="いまどうしてる？"></textarea>
+
+                        <div class="mt-3 mb-3 text-center">
+                            <button class="btn btn-primary rounded-pill w-25">つぶやく</button>
+                        </div>
                     </form>
                 </div>
             </main>
