--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
                         </div>
                     </form>
                 </div>
+
+                <!-- Tweet List -->
+                <div class="row">
+                    <article class="tweet">
+                        <!-- profile icon -->
+                        <div class="profile-image">
+                            <img src="images/me.png" alt="">
+                        </div>
+
+                        <!-- tweet body -->
+                        <div class="tweet-body">
+
+                        </div>
+                    </article>
+                </div>
             </main>
         </div>
     </div>
