--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
 
                         <!-- tweet body -->
                         <div class="tweet-body">
-
+                            <!-- tweet user -->
+                            <div class="tweet-user">
+                                <span class="fw-bold">@YSE</span>
+                                <span class="ms-1 text-secondary">30分前</span>
+                            </div>
+                            <!-- tweet content -->
+                            <div class="tweet-text">
+                                東京駅にいます！
+                            </div>
                         </div>
                     </article>
                 </div>
