--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 <!-- Tweet List -->
                 <div class="row">
-                    <article class="tweet">
+                    <article class="tweet d-flex">
                         <!-- profile icon -->
                         <div class="profile-image">
                             <img src="images/me.png" alt="">
