add sub navigation

--- a/index.html
+++ b/index.html
@@ -64,6 +64,23 @@
                             <div class="tweet-text">
                                 東京駅にいます！
                             </div>
+                            <!-- tweet navigation -->
+                            <nav>
+                                <ul>
+                                    <li>
+                                        <a href="#"><img src="svg/bubble.svg"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="svg/loop.svg"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="svg/heart.svg"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="svg/trash.svg"></a>
+                                    </li>
+                                </ul>
+                            </nav>
                         </div>
                     </article>
                 </div>
