--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                                 東京駅にいます！
                             </div>
                             <!-- tweet navigation -->
-                            <nav>
-                                <ul>
+                            <nav class="tweet-nav">
+                                <ul class="d-flex mt-2">
                                     <li>
                                         <a href="#"><img src="svg/bubble.svg"></a>
                                     </li>
