--- a/index.html
+++ b/index.html
@@ -83,6 +83,81 @@
                             </nav>
                         </div>
                     </article>
+                    <article class="tweet d-flex">
+                        <!-- profile icon -->
+                        <div class="profile-image">
+                            <img src="images/me.png" alt="">
+                        </div>
+
+                        <!-- tweet body -->
+                        <div class="tweet-body">
+                            <!-- tweet user -->
+                            <div class="tweet-user">
+                                <span class="fw-bold">@YSE</span>
+                                <span class="ms-1 text-secondary">１時間前</span>
+                            </div>
+                            <!-- tweet content -->
+                            <div class="tweet-text">
+                                おなかがすいた！
+                            </div>
+                            <!-- tweet navigation -->
+                            <nav class="tweet-nav">
+                                <ul class="d-flex mt-2">
+                                    <li>
+                                        <a href="#"><img src="svg/bubble.svg"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="svg/loop.svg"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="svg/heart.svg"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="svg/trash.svg"></a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </article>
+
+                    <article class="tweet d-flex">
+                        <!-- profile icon -->
+                        <div class="profile-image">
+                            <img src="images/me.png" alt="">
+                        </div>
+
+                        <!-- tweet body -->
+                        <div class="tweet-body">
+                            <!-- tweet user -->
+                            <div class="tweet-user">
+                                <span class="fw-bold">@YSE</span>
+                                <span class="ms-1 text-secondary">2023/5/25</span>
+                            </div>
+                            <!-- tweet content -->
+                            <div class="tweet-text">
+                                今日は晴れです！
+                            </div>
+                            <!-- tweet navigation -->
+                            <nav class="tweet-nav">
+                                <ul class="d-flex mt-2">
+                                    <li>
+                                        <a href="#"><img src="svg/bubble.svg"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="svg/loop.svg"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="svg/heart.svg"></a>
+                                    </li>
+                                    <li>
+                                        <a href="#"><img src="svg/trash.svg"></a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </article>
+
+
                 </div>
             </main>
         </div>
