--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tweet</title>
     <!-- Bootstrap5 CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/default.css">
 </head>
+
 <body>
     <div class="container-fluid">
         <div class="row">
@@ -32,12 +35,11 @@
             </header>
 
             <!-- Ctrl + Shift + R : 強制再読み込み -->
-            <main id="main" class="col-md-9">
+            <main id="main" class="col-md-6">
                 <h2>ホーム</h2>
                 <div class="row">
                     <form action="" method="post">
-                        <textarea class="form-control" name="message" 
-                        placeholder="いまどうしてる？"></textarea>
+                        <textarea class="form-control" name="message" placeholder="いまどうしてる？"></textarea>
 
                         <div class="mt-3 mb-3 text-center">
                             <button class="btn btn-primary rounded-pill w-25">つぶやく</button>
@@ -160,7 +162,20 @@
 
                 </div>
             </main>
+
+            <aside class="col-md-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="images/me.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                </div>
+            </aside>
         </div>
     </div>
 </body>
+
 </html>
